--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a1-car-app",
   "version": "0.1.0",
-  "homepage": "https://cakirilker.github.io/automobile-app",
+  "homepage": "https://cakirilker.github.io/a1-car-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
