car detail page, 404 page, redux-toolkit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn build
-
+        env:
+          CI: ""
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
