--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress": "cypress open",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
