--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "homepage": "https://cakirilker.github.io/a1-car-app",
   "private": true,
+  "author": {
+    "url": "https://cakirilker.github.io/",
+    "email": "cakir.ilker@outlook.com",
+    "name": "İlker Çakır"
+  },
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
